--- a/src/index.css
+++ b/src/index.css
@@ -344,8 +344,35 @@ header .cart span {
 }
 
 /*-----------------------MEDIA-----------------------*/
+@media only screen and (max-width: 1000px){
+  .carrito__item {
+    width: 92%;
+  }
+}
+
+@media only screen and (max-width: 700px){
+  .carrito {
+    width: 100%;
+    height: 100%;
+  }
+  .carrito__item h3 {
+    font-size: 1.2rem;
+  }
+}
+
 @media only screen and (max-width: 600px){
   header ul {
     display: none;
   }
+}
+
+@media only screen and (max-width: 450px){
+  .carrito__item h3 {
+    display: .5rem;
+  }
+  .carrito__item .remove__item box-icon {
+    width: 30px;
+    height: 70px;
+  }
+
 }
